// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWrapper should add clear button if showClearButton is true 1`] = `
<FieldWrapper
  clearLabel="Clear"
  isFocused={false}
  onClear={null}
  showClearButton={true}
>
  <div
    className="FieldWrapper"
  >
    <div
      className="FieldWrapper__content"
    >
      some children
    </div>
    <Button
      className="FieldWrapper__clearButton"
      context="link"
      disabled={false}
      isBlock={false}
      isInline={true}
      onClick={[Function]}
      size="normal"
      type="button"
    >
      <button
        className="Button Button--isInline Button--context_link FieldWrapper__clearButton"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Clear
      </button>
    </Button>
  </div>
</FieldWrapper>
`;

exports[`FieldWrapper should render correctly 1`] = `
<FieldWrapper
  clearLabel=""
  isFocused={false}
  onClear={null}
  showClearButton={false}
>
  <div
    className="FieldWrapper"
  >
    <div
      className="FieldWrapper__content"
    >
      some children
    </div>
  </div>
</FieldWrapper>
`;
